fix item filter visibility

--- a/components/ShowMoreText/ShowMoreText.module.css
+++ b/components/ShowMoreText/ShowMoreText.module.css
@@ -14,11 +14,12 @@
 }
 
 .textContainer.expanded {
-        max-height: none;
+    max-height: none;
+    overflow: visible;
 }
 
 .textContainer.expanded::after {
-display: none;
+    display: none;
 }
 
 .showMoreContainer {
